discussion/kv_engine/177125/177125_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Make DcpFlowControlManager::engine const

Change-Id: I08a3ccdf0b7b5f6d0190ef40029c98ea47642013

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-06 07:55:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-06 09:09:07.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18731/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:24:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:32:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18731/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:24:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18731/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39922/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19860/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4372 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-07-06T08:46:45.319Z] (252 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19860/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29015/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferYes
[2022-07-06T08:30:30.358Z] unknown file: Failure
[2022-07-06T08:30:30.358Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":13,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-06T08:30:30.358Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrNo, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (778 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29015/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21648/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyYes_AlwaysBufferNo":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyYes_AlwaysBufferNo
[2022-07-06T08:48:34.300Z] unknown file: Failure
[2022-07-06T08:48:34.300Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-07-06T08:48:34.300Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyYes_AlwaysBufferNo, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (2019 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyYes_AlwaysBufferNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21648/ )

Timeout of a CTest test [2022-07-06T08:22:51.200Z]   2/422 Test #252: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21648/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17888/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47527/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20978/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8511/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20626/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
